tests-integration/tests/roundtrip/partitions/operators/party/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/partitions/operators/party/input.essence:1:53:
  |
1 | find foo : partition from int(1..3) such that |party(foo)| = 1
  |                                                     ^^^^^
Insufficient args, expected 2 got 1

